USD changed to INR

--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -62,21 +62,21 @@
                           <div class="form-group">
                             <div class="col-md-5 col-sm-8 col-xs-11">
                               <%= label_tag :status_update_cost, "Status Update" %>$
-                              <%= text_field_tag '', account.status_update_cost %> USD
+                              <%= text_field_tag '', account.status_update_cost %> INR
                             </div>
                             <div class="col-md-6 col-sm-8 col-xs-11">
                               <%= label_tag :cover_photo_cost, "Cover Photo" %>$
-                              <%= text_field_tag '', account.cover_photo_cost %> USD
+                              <%= text_field_tag '', account.cover_photo_cost %> INR
                             </div>
                           </div>
                           <div class="form-group">
                             <div class="col-md-5 col-sm-8 col-xs-11">
                               <%= label_tag :profile_photo_cost, "Profile Photo" %>$
-                              <%= text_field_tag '', account.profile_photo_cost %> USD
+                              <%= text_field_tag '', account.profile_photo_cost %> INR
                             </div>
                             <div class="col-md-6 col-sm-8 col-xs-11">
                               <%= label_tag :video_post_cost, "Video Post" %>$
-                              <%= text_field_tag '', account.video_post_cost %> USD
+                              <%= text_field_tag '', account.video_post_cost %> INR
                             </div>
                           </div>
                         </div>
