--- a/app/views/payment_transactions/brand_payment.html.erb
+++ b/app/views/payment_transactions/brand_payment.html.erb
@@ -26,7 +26,7 @@
             <th class="squaredFour" id="selecctall"><input type="checkbox" class="payment-header" value="all"/></th>
             <th>Date Billed</th>
             <th>Transaction ID</th>
-            <th>Amount Recieved (USD)</th>
+            <th>Amount Recieved (INR)</th>
             <th>Payment Status</th>
           </tr>
           </thead>
