--- a/app/views/payment_transactions/influencer_payment.html.erb
+++ b/app/views/payment_transactions/influencer_payment.html.erb
@@ -5,7 +5,7 @@
 <div class="bank-accounts">
 
   <div class="influencer-payment-div ">
-    <p class="payment-balance">Available<span class="space"></span>Balance:<span class="balance">$2500</span><span class="space"></span>USD</p>
+    <p class="payment-balance">Available<span class="space"></span>Balance:<span class="balance">$2500</span><span class="space"></span>INR</p>
     <div class="amount-withdraw">
       <%= label_tag 'withdraw_amount', 'Amount to Withdraw' %>
       <%= text_field_tag 'withdraw_amount', '' %>
@@ -59,7 +59,7 @@
             <th class="squaredFour" id="selecctall"><input type="checkbox" class="payment-header" value="all"/></th>
             <th>Date Billed</th>
             <th>Transaction ID</th>
-            <th>Amount Recieved (USD)</th>
+            <th>Amount Recieved (INR)</th>
             <th>Payment Status</th>
           </tr>
           </thead>
