--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -109,21 +109,21 @@
                         <div class="form-group">
                           <div class="col-md-5 col-sm-8 col-xs-11">
                             <%= g.label :status_update_cost, "Status Update" %>$
-                            <%= g.text_field :status_update_cost %> USD
+                            <%= g.text_field :status_update_cost %> INR
                           </div>
                           <div class="col-md-6 col-sm-8 col-xs-11">
                             <%= g.label :cover_photo_cost, "Cover Photo" %>$
-                            <%= g.text_field :cover_photo_cost %> USD
+                            <%= g.text_field :cover_photo_cost %> INR
                           </div>
                         </div>
                         <div class="form-group">
                           <div class="col-md-5 col-sm-8 col-xs-11">
                             <%= g.label :profile_photo_cost, "Profile Photo" %>$
-                            <%= g.text_field :profile_photo_cost %> USD
+                            <%= g.text_field :profile_photo_cost %> INR
                           </div>
                           <div class="col-md-6 col-sm-8 col-xs-11">
                             <%= g.label :video_post_cost, "Video Post" %>$
-                            <%= g.text_field :video_post_cost %> USD
+                            <%= g.text_field :video_post_cost %> INR
                           </div>
                         </div>
                       </div>
@@ -135,21 +135,21 @@
                 <!--<div class="form-group">-->
                 <!--<div class="col-md-5 col-sm-8 col-xs-11">-->
                 <!--<label for="twitter_bhanu_status_update">Status Update</label>$-->
-                <!--<input type="text" class="" id="twitter_bhanu_status_update"/> USD-->
+                <!--<input type="text" class="" id="twitter_bhanu_status_update"/> INR-->
                 <!--</div>-->
                 <!--<div class="col-md-6 col-sm-8 col-xs-11">-->
                 <!--<label for="twitter_bhanu_cover_photo">Cover Photo</label>$-->
-                <!--<input type="text" class="" id="twitter_bhanu_cover_photo"/> USD-->
+                <!--<input type="text" class="" id="twitter_bhanu_cover_photo"/> INR-->
                 <!--</div>-->
                 <!--</div>-->
                 <!--<div class="form-group">-->
                 <!--<div class="col-md-5 col-sm-8 col-xs-11">-->
                 <!--<label for="twitter_bhanu_profile_photo">Profile Photo</label>$-->
-                <!--<input type="text" class="" id="twitter_bhanu_profile_photo"/> USD-->
+                <!--<input type="text" class="" id="twitter_bhanu_profile_photo"/> INR-->
                 <!--</div>-->
                 <!--<div class="col-md-6 col-sm-8 col-xs-11">-->
                 <!--<label for="twitter_bhanu_video_post">Video Post</label>$-->
-                <!--<input type="text" class="" id="twitter_bhanu_video_post"/> USD-->
+                <!--<input type="text" class="" id="twitter_bhanu_video_post"/> INR-->
                 <!--</div>-->
                 <!--</div>-->
                 <!--</div>-->
