--- a/app/views/brands/_explore_influencers_profile.html.erb
+++ b/app/views/brands/_explore_influencers_profile.html.erb
@@ -58,21 +58,21 @@
                   <div class="form-group">
                     <div class="col-md-5 col-sm-8 col-xs-11">
                       <label for="fb_bhanu_status_update">Status Update</label>$
-                      <input type="text" class="" id="fb_bhanu_status_update"/> USD
+                      <input type="text" class="" id="fb_bhanu_status_update"/> INR
                     </div>
                     <div class="col-md-6 col-sm-8 col-xs-11">
                       <label for="fb_bhanu_cover_photo">Cover Photo</label>$
-                      <input type="text" class="" id="fb_bhanu_cover_photo"/> USD
+                      <input type="text" class="" id="fb_bhanu_cover_photo"/> INR
                     </div>
                   </div>
                   <div class="form-group">
                     <div class="col-md-5 col-sm-8 col-xs-11">
                       <label for="fb_bhanu_profile_photo">Profile Photo</label>$
-                      <input type="text" class="" id="fb_bhanu_profile_photo"/> USD
+                      <input type="text" class="" id="fb_bhanu_profile_photo"/> INR
                     </div>
                     <div class="col-md-6 col-sm-8 col-xs-11">
                       <label for="fb_bhanu_video_post">Video Post</label>$
-                      <input type="text" class="" id="fb_bhanu_video_post"/> USD
+                      <input type="text" class="" id="fb_bhanu_video_post"/> INR
                     </div>
                   </div>
                 </div>
