--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -126,8 +126,8 @@
               </a>
             </li>
 
-            <li  class="<%=  (params[:controller] == 'payment_transactions') ? 'active' : '' %>">
-              <a href="<%= brand_payment_payment_transactions_path %>">
+            <li  class="<%=  (params[:controller] == 'brand_payments') ? 'active' : '' %>">
+              <a href="<%= brand_payment_brand_payments_path %>">
                 <i class="fa fa-dollar"></i><span class="space-sidebar">PAYMENTS</span>
               </a>
             </li>
@@ -151,8 +151,8 @@
               </a>
             </li>
 
-            <li class="<%=  (params[:controller] == 'payment_transactions') ? 'active' : '' %>">
-              <a href="<%= influencer_payment_payment_transactions_path %>">
+            <li class="<%=  (params[:controller] == 'influencer_payments') ? 'active' : '' %>">
+              <a href="<%= influencer_payment_influencer_payments_path %>">
                 <i class="fa fa-dollar"></i><span class="space-sidebar">PAYMENTS</span>
               </a>
             </li>
