--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -33,20 +33,7 @@
 
   <%= form_for @campaign , url: campaigns_path , html: { class: 'form-horizontal'} do |f| %>
 
-      <% if @campaign.errors.any? %>
-          <div id="error_explanation">
-            <h2>
-              <%= pluralize(@campaign.errors.count, "error") %> prohibited
-              this article from being saved:
-            </h2>
-            <ul>
-              <% @campaign.errors.full_messages.each do |msg| %>
-                  <li><%= msg %></li>
-              <% end %>
-            </ul>
-          </div>
-      <% end %>
-
+      <%= render 'shared/show_errors', :object => @campaign%>
 
       <%= csrf_meta_tag %>
       <div class="col-md-12">
@@ -173,16 +160,16 @@
         console.log( <%= @costs %>);
         $('#post_type').change(function() {
             if (this.value == 0) {
-                $('#post_cost').val(<%= @costs[0] %>);
+                $('#post_cost').val(<%= @costs[0][0] %>);
             }
             else if (this.value == 1) {
-                $('#post_cost').val(<%= @costs[1] %>);
+                $('#post_cost').val(<%= @costs[0][1] %>);
             }
             else if (this.value == 2) {
-                $('#post_cost').val(<%= @costs[2] %>);
+                $('#post_cost').val(<%= @costs[0][2] %>);
             }
             else {
-                $('#post_cost').val(<%= @costs[3] %>);
+                $('#post_cost').val(<%= @costs[0][3] %>);
             }
 
 
