[Payment] : 1.  Bank Account opened from New action 2. Bank account modal moved to new file 3. Validation Error message added in Bank account modal 4. Validation added in Bank account

--- a/app/assets/stylesheets/payments.css
+++ b/app/assets/stylesheets/payments.css
@@ -439,6 +439,10 @@ only screen and (max-width: 340px) {
     margin: 20px;
 }
 
+.bank-accounts a {
+    cursor: pointer;
+}
+
 .bank_accounts_table {
     margin-top : 25px;
 }
