[Payment] : Redirect to Influencer_payment page after successfully adding bank account

--- a/app/views/bank_accounts/create.js.erb
+++ b/app/views/bank_accounts/create.js.erb
@@ -1,3 +1,8 @@
+if (<%= @is_save %>)
+{
+   window.location.reload();
+}
+
 if ($('#AddBankAccount #error_explanation').length)
 {
     $('#AddBankAccount #error_explanation').remove();
