--- a/app/views/campaigns/new.html.erb
+++ b/app/views/campaigns/new.html.erb
@@ -39,13 +39,20 @@
       <div class="col-md-12">
         <div class="social-account-tabs">
           <ul class="nav nav-tabs social-account-nav-tabs">
-            <li class="active"><a data-toggle="tab" href="#fb_bhanu"><i class="social-account-fa-edit fa fa-facebook"></i> Bhanu Prasad</a></li>
+            <!--<li class="active"><a data-toggle="tab" href="#fb_bhanu"><i class="social-account-fa-edit fa fa-facebook"></i> Bhanu Prasad</a></li>-->
           </ul>
 
           <div class="tab-content social-account-tab-content">
             <div id="fb_bhanu" class="tab-pane fade in active">
 
               <div id="costs" data-costs="<%= @costs %>"></div>
+
+              <div class="form-group">
+                <%= f.label :social_account_activity_id, 'Choose Social Account Name', class: 'control-label col-md-4' %>
+                <div class="col-sm-8">
+                  <%= f.select :social_account_activity_id, options_for_select(User.find(params[:campaign][:receiver_id]).facebook_accounts.map{ |account| [account.name, account.id] }) , { :include_blank => true }, { :class => 'form-control type-of-post', :id => '' } %>
+                </div>
+              </div>
 
               <div class="form-group">
                 <%= f.label :post_type, 'Choose the type of post', class: 'control-label col-md-4' %>
@@ -57,7 +64,7 @@
               <div class="form-group">
                 <%= f.label :cost, "Cost", class: 'control-label col-md-4' %>
                 <div class="col-md-8">
-                  <%= f.text_field :cost, { class: 'form-control campaign-cost-input', disabled: true, id: 'post_cost' } %>
+                  <%= f.text_field :cost, { class: 'form-control campaign-cost-input', readonly: true, id: 'post_cost' } %>
                 </div>
               </div>
 
