--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -197,9 +197,9 @@
         </div>
         <div class="col-md-9 col-sm-9 col-xs-12 search-top-margin">
           <!-- search form -->
-          <form action="#" method="get" class="form-group">
+          <form action="<%= current_user.brand? ? explores_path : '#' %>" method="get" class="form-group">
             <button type="submit" class="btn-circle center-block pull-right">GO</button>
-            <input class="form-control rounded-input-box" type="search" placeholder="Enter Keywords..."/>
+            <input value="<%= params[:search_key].presence %>" name="search_key" class="form-control rounded-input-box" type="search" placeholder="Enter Keywords..."/>
             <span class="glyphicon glyphicon-search"></span>
           </form>
         </div>
