- passing explore page range slider value to explore show method for advance search

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -211,7 +211,7 @@
 
     <!-- main content -->
     <div class="main-content">
-      <%= render partial: "shared/flash_messages", flash: flash %>
+      <%= render partial: 'shared/flash_messages', flash: flash %>
 
       <%= yield %>
 
