--- a/app/views/explores/show.html.erb
+++ b/app/views/explores/show.html.erb
@@ -22,6 +22,8 @@
               <div id="followers-range" class="noUi-target noUi-ltr noUi-horizontal noUi-background"></div>
               <span id="followers-range-value-lower">50.00</span>
               <span id="followers-range-value-upper">5000.00</span>
+              <%= hidden_field_tag 'followers-range-value-lower', '50', class: 'followers-range-value-lower' %>
+              <%= hidden_field_tag 'followers-range-value-upper', '500', class: 'followers-range-value-upper' %>
             </div>
           </div>
         </div>
@@ -44,6 +46,8 @@
               <div id="influencer-price" class="noUi-target noUi-ltr noUi-horizontal noUi-background"></div>
               <span id="influencer-price-value-lower">50.00</span>
               <span id="influencer-price-value-upper">5000.00</span>
+              <%= hidden_field_tag 'influencer-price-value-lower', '50', class: 'influencer-price-value-lower' %>
+              <%= hidden_field_tag 'influencer-price-value-upper', '500', class: 'influencer-price-value-upper' %>
             </div>
           </div>
         </div>
@@ -107,7 +111,7 @@
 </div>
 
 <script type="text/javascript">
-    var build_range = function (sliderObj, displayElementIdAry) {
+    var build_range = function (sliderObj, displayElementIdAry, inputElementArray) {
         noUiSlider.create(sliderObj, {
             range: {
                 'min': 0,
@@ -125,7 +129,7 @@
             start: [50, 5000]
         });
 
-        setSliderDisplay(sliderObj, displayElementIdAry);
+        setSliderDisplay(sliderObj, displayElementIdAry, inputElementArray);
     };
 
     var setSliderDisplay = function (sliderObj, displayElementObjAry) {
@@ -134,8 +138,14 @@
             document.getElementById(displayElementObjAry[1])
         ];
 
+        var inputValues = [
+            document.getElementsByClassName(displayElementObjAry[0])[0],
+            document.getElementsByClassName(displayElementObjAry[1])[0]
+        ];
+
         sliderObj.noUiSlider.on('update', function (values, handle) {
             skipValues[handle].innerHTML = values[handle];
+            inputValues[handle].value = values[handle];
         });
     };
 
