--- a/app/views/profile/_add_facebook_account.html.erb
+++ b/app/views/profile/_add_facebook_account.html.erb
@@ -32,6 +32,13 @@
                     <input class="btn btn-primary" type="submit" value="CONNECT"/>
                 </form>
             </div>
+
+            <div class='help-note'>
+                    <P>Note:</p>
+                    <p>Only the pages that meet out eligibility guidelines are displayed here.</p>
+                    <p>You can view our eligibility guidelines <a href='/helps/index'>here</a>.</p>
+                </div>
+
           </div>
         </div>
       </div>
