--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,6 @@
   <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Hind' rel='stylesheet' type='text/css'>
   <%= csrf_meta_tag %>
-  <!-- pubnub seubscription with event binding -->
 
   <script type="text/javascript">
     // global variable for pubnub
@@ -21,7 +20,6 @@
 
       $(document).ready(function () {
 
-          //var PUBNUB_CLIENT = null;
           <% if Rails.env.beta? || Rails.env.production? %>
           PUBNUB_CLIENT = PUBNUB.init({
               subscribe_key: '<%= CONFIG[:pubnub_subscribe_key] %>',
@@ -34,8 +32,6 @@
               uuid: current_user_id
           });
           <% end %>
-
-
 
           PUBNUB_CLIENT.subscribe({
               channel: ['<%= current_user.channel_name %>'],
@@ -108,10 +104,11 @@
         </li>
 
         <% if current_user.brand? %>
-            <li>
-              <%= link_to offers_path do %>
+
+            <li class="<%=  (params[:controller] == 'offers') ? 'active' : '' %>">
+              <a href="<%= offers_path %>">
                 <span class="glyphicon glyphicon-envelope"> </span><span class="space-sidebar">MESSAGES</span>
-              <% end %>
+              </a>
             </li>
 
             <li class="<%=  (params[:controller] == 'explores' && params[:action] == 'show') ? 'active' : '' %>">
