- On way to implement available toggle functionality

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -275,6 +275,11 @@ hr {
     color: #999999;
 }
 
+.user-status > li > a{
+  border-radius: 30px;
+}
+
+
 .dropdown-menu > li > a:hover {
     border-radius: 10px;
 }
