--- a/app/views/explores/show.html.erb
+++ b/app/views/explores/show.html.erb
@@ -13,7 +13,7 @@
           <div class="row">
             <div class="col-md-12">
               <label for="category"> Category </label>
-              <%= select_tag :category, options_for_select(category_list), prompt: "Select a Category" %>
+              <%= select_tag :category, options_for_select(category_list, selected: params[:category].presence), prompt: "Select a Category" %>
             </div>
 
             <div class="col-md-12">
@@ -33,10 +33,7 @@
             <div class="col-md-12">
               <label for="social-media-platform"> Social Media Platform </label>
               <select name="social_media_platform" id="social-media-platform">
-                <option value="">Select a Social Media Platform</option>
-                <option>Facebook</option>
-                <option>Twitter</option>
-                <option>Linkedin</option>
+                <option selected>Facebook</option>
               </select>
             </div>
 
@@ -56,7 +53,7 @@
           <div class="row">
             <div class="col-md-12">
               <label for="influencer_country"> Country </label>
-              <%= country_select_tag :country, {priority: %w(US CA IN)}, {:class => 'profile-dropdown-color'} %>
+              <%= country_select_tag :country,  params[:country].present? ? [params[:country]] : ['IN'], {:class => 'profile-dropdown-color'} %>
               <br/>
 
               <div>
@@ -111,7 +108,7 @@
 </div>
 
 <script type="text/javascript">
-    var build_range = function (sliderObj, displayElementIdAry, inputElementArray) {
+    var build_range = function (sliderObj, displayElementIdAry, start_value, end_value) {
         noUiSlider.create(sliderObj, {
             range: {
                 'min': 0,
@@ -126,10 +123,10 @@
                 'max': 5000
             },
             snap: true,
-            start: [50, 5000]
+            start: [start_value, end_value]
         });
 
-        setSliderDisplay(sliderObj, displayElementIdAry, inputElementArray);
+        setSliderDisplay(sliderObj, displayElementIdAry);
     };
 
     var setSliderDisplay = function (sliderObj, displayElementObjAry) {
@@ -149,11 +146,18 @@
         });
     };
 
+    var influencerPriceLow = <%= params['influencer-price-value-lower'].presence || 50 %>;
+    var influencerPriceHigh = <%= params['influencer-price-value-upper'].presence || 500 %>;
+
+    var followerRangeLow = <%= params['followers-range-value-lower'].presence || 50 %>;
+    var followerRangeHigh = <%= params['followers-range-value-upper'].presence || 500 %>;
+
+
     var followers_slider = document.getElementById('followers-range');
     var followers_slider_lbl_id = ['followers-range-value-lower', 'followers-range-value-upper'];
-    build_range(followers_slider, followers_slider_lbl_id);
+    build_range(followers_slider, followers_slider_lbl_id, followerRangeLow, followerRangeHigh);
 
     var influencer_slider = document.getElementById('influencer-price');
     var followers_slider_lbl_id = ['influencer-price-value-lower', 'influencer-price-value-upper'];
-    build_range(influencer_slider, followers_slider_lbl_id);
+    build_range(influencer_slider, followers_slider_lbl_id, influencerPriceLow, influencerPriceHigh);
 </script>
