- complete offer delete functionality

--- a/app/views/offers/index.html.erb
+++ b/app/views/offers/index.html.erb
@@ -7,9 +7,7 @@
   <div class="payment-button-set pull-right">
     <div class="star-del-ref-panel">
       <%= image_tag  asset_path('star-icon.png'), class: 'make-all-stared'%>
-      <a href="#"><img src="<%= asset_path('trash-icon.png') %>"></a>
-      <a href="#"><img src="<%= asset_path('Refresh_icon.png') %>"></a>
-
+      <%= image_tag  asset_path('trash-icon.png'), class: 'delete-selected-offer'%>
     </div>
   </div>
 </div>
