--- a/app/assets/stylesheets/offers.css
+++ b/app/assets/stylesheets/offers.css
@@ -232,6 +232,10 @@ only screen and (max-width: 540px) {
     margin-top: -72px;
     margin-left: 5px;
 }
+.delete-selected-offer{
+    cursor: pointer;
+    padding: 0 10px;
+}
 
 
 
